fixed problems with java version 17 pre-1.21